--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
   background-color: #f9f9f9;
-  color: #333;
+  color: #434e4a;
   scroll-behavior: smooth;
 }
 button {
