--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
 .navbar {
     position: fixed;
     width: 100%;
-    background: white;
+    background: rgb(202, 212, 214);
     z-index: 1000;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   }
@@ -12,6 +12,7 @@
     padding: 1rem 2rem;
     max-width: 1200px;
     margin: 0 auto;
+    border-radius: 10px;
   }
   .brand {
     font-size: 1.5rem;
